# Terade

./: .gitignore  CMakeLists.txt  README.md  SCOPE.md  USECASE.md
cmake/: doctest.cmake
src/: CMakeLists.txt  api.cpp  api.h  asset.h  commands.cpp  file_manager.cpp  game.cpp  game.h  main.cpp  options.cpp  options.h  output.cpp  output.h  player.cpp  player.h  portfolio.cpp  portfolio.h  test_btc.json  timer.h  transaction.h  utils.cpp  utils.h  view.h  view_curses.cpp  view_curses.h
src/data/: all_coins.json  binancecoin.json  bitcoin.json  cardano.json  dogecoin.json  ethereum.json  maker.json  stellar.json
test/: CMakeLists.txt
